Fixed bugs and display spacing for page header

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,29 @@
 /* File defining font faces to use on the websites page */
 
 @font-face {
-  font-family: 'IBM Plex Sans Variable',
-  src: url("../fonts/IBM_Plex/IBMPlexSansVariable.ttf")
+  font-family: 'IBMPlexSans';
+  src: url("../fonts/IBM_Plex/Sans/IBMPlexSansVariable.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'IBM Plex Sans Italic',
-  src: url("../fonts/IBM_Plex/IBMPlexSansItalic.ttf")
+  font-family: 'IBMPlexSans';
+  src: url("../fonts/IBM_Plex/Sans/IBMPlexSansItalic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'IBMPlexMono';
+  src: url("../fonts/IBM_Plex/Mono/IBMPlexMono-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'IBMPlexMono';
+  src: url("../fonts/IBM_Plex/Sans/IBMPlexMono-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
 }
